--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,2 +1,2 @@
-<div id="corner"><%= image_tag("topleft-blue-flowers.png") %></div>
+<div id="corner"><%= image_tag("https://s3.amazonaws.com/wedsite-files/images/topleft-blue-flowers.png") %></div>
 <%= render "shared/nav" %>
