misc mailer fixes

--- a/app/views/rsvp_mailer/invite_email.html.erb
+++ b/app/views/rsvp_mailer/invite_email.html.erb
@@ -9,7 +9,7 @@
       You're recieving this email because we (Beatrice and Justice) are getting married soon, and we'd love to have you there.
     </p>
     <p>
-      You can access your rsvp at <%= @rsvp_url %>; please let us know if you can attend!
+      You can access your rsvp at <%= link_to "this page", @rsvp_url %> on our website; please let us know if you can attend!
     </p>
     <p>The website has a lot of information about venue, the ceremony, what to bring, etc, so please take a look around</p>
     <p>With love,<br \>
