capitalization fixes for rsvp.response

--- a/app/views/rsvps/_rsvp-form.html.erb
+++ b/app/views/rsvps/_rsvp-form.html.erb
@@ -4,12 +4,12 @@ You haven't rsvpd yet!
 	<p>
 		Can you attend our wedding?
 		<br />
-		<%= f.radio_button :response, :yes %> 
-		<%= f.label :response, 'Yes!', value: :yes %>
-		<%= f.radio_button :response, :no %>
-		<%= f.label :response, 'No', value: :no %>
-		<%= f.radio_button :response, :undecided %>
-		<%= f.label :response, 'Maybe', value: :undecided %>
+		<%= f.radio_button :response, :Yes %> 
+		<%= f.label :response, 'Yes!', value: :Yes %>
+		<%= f.radio_button :response, :No %>
+		<%= f.label :response, 'No', value: :No %>
+		<%= f.radio_button :response, :Undecided %>
+		<%= f.label :response, 'Maybe', value: :Undecided %>
 	</p>
 	<p>
 		Do you have any dietary restrictions?
