--- a/app/views/rsvps/admin_index.html.erb
+++ b/app/views/rsvps/admin_index.html.erb
@@ -47,7 +47,7 @@
         <%= f.label :wedding_party, 'No', value: false %>
     </div>
     <%= f.hidden_field :has_rsvpd, value: false %>
-    <%= f.hidden_field :response, value: :na %>
+    <%= f.hidden_field :response, value: :NA %>
     <div class = "action">
         <%= f.submit %>
     </div>
