--- a/app/views/info/location.html.erb
+++ b/app/views/info/location.html.erb
@@ -20,13 +20,25 @@ You might want to bring:
 
 <h3>Driving Directions</h3>
 
-<p><b>To Friends Camp from Boston, Portland and points south:</b>
-Drive north from Portland on Interstate 295 to Interstate 95. Look for the third Augusta exit (#113) across the Kennebec river bridge to Route 202 North and Route 3 East. Continue on for 14 miles to South China. Go through the light in South China and take the next left onto Route 202 (Lakeview Drive). The Friends Camp driveway is 3.5 miles on the right. The address is 729 Lakeview Drive.</p>
+<p><b>Parking Instructions:</b><br />
+Please park on the grass between the garage and aviary hall - this is east of the garage,
+west of the campfire circle, and south of the soccer field.
+While the map of friends camp shows additional parking in the tetherball field
+to the south of this parking, we are both not allowed to park there and
+using that field for outdoor meals.
+</p>
 
-<p><b>To Friends Camp from Canada, Bangor and points north:</b>
+<p><b>To Friends Camp from Boston, Portland and points south:</b><br />
+Drive north from Portland on Interstate 295 to Interstate 95. Look for the third Augusta exit (#113)
+across the Kennebec river bridge to Route 202 North and Route 3 East.
+Continue on for 14 miles to South China. Go through the light in South China
+and take the next left onto Route 202 (Lakeview Drive).
+The Friends Camp driveway is 3.5 miles on the right. The address is 729 Lakeview Drive.</p>
+
+<p><b>To Friends Camp from Canada, Bangor and points north:</b><br />
 If you are traveling south on I95 take Exit 127 onto Route 137 (Kennedy Memorial Drive) into Waterville. Go about a mile and half and turn right after you have crossed a small  bridge, just before the road curves. Travel 2.2 miles and turn right, then go 6.1 miles to light at China Village. Continue straight at the light; you are now on Route 202. Stay on Route 202 toward South China for 3.5 miles. (This part of Route 202 is also known as Lakeview Drive.) After you pass the China Middle School, Friends Camp is the third driveway on your left. The address is 729 Lakeview Drive.</p>
 
-<p><b>To Friends Camp from Ellsworth, Belfast and points east:</b>
+<p><b>To Friends Camp from Ellsworth, Belfast and points east:</b><br />
 From the Route 1 traffic interchange in Belfast drive west on Route 3. Go approximately 32 miles from the coast to Route 202 North. Turn Right onto Route 202; the Friends Camp driveway is 3.5 miles from Route 3 on your right. The address is 729 Lakeview Drive.
 </p>
 
