--- a/app/views/info/registry.html.erb
+++ b/app/views/info/registry.html.erb
@@ -1,2 +1,6 @@
-<h1>Info#registry</h1>
-<p>Find me in app/views/info/registry.html.erb</p>
+<h1>Registry</h1>
+<div style='display:table-cell; vertical-align:middle; text-align:center'>
+    <a href='https://www.amazon.com/wedding/beatrice-corfman-justice-erikson-south-china-september-2018/registry/1P7406GPKC37E' target='_blank'>
+        <img src='https://s3-us-west-2.amazonaws.com/lambda-guestview-screenshots/screenshots/screenshots_guestview_ATVPDKIKX0DER_1P7406GPKC37E.png' width='110%' height='90%' border='1'>
+    </a>
+</div>
