--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <title>Wedsite</title>
     <%= csrf_meta_tags %>
 	
-		<link href="https://fonts.googleapis.com/css?family=Meddon|Merriweather|Pinyon+Script" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Meddon|Merriweather:400,400italic,700|Pinyon+Script" rel="stylesheet">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
