--- a/app/views/info/registry.html.erb
+++ b/app/views/info/registry.html.erb
@@ -1,6 +1,2 @@
 <h1>Registry</h1>
-<div style='display:table-cell; vertical-align:middle; text-align:center'>
-    <a href='https://www.amazon.com/wedding/beatrice-corfman-justice-erikson-south-china-september-2018/registry/1P7406GPKC37E' target='_blank'>
-        <img src='https://s3-us-west-2.amazonaws.com/lambda-guestview-screenshots/screenshots/screenshots_guestview_ATVPDKIKX0DER_1P7406GPKC37E.png' width='110%' height='90%' border='1'>
-    </a>
-</div>
+<a class="zola-registry-embed" href="https://www.zola.com/registry/beatriceandjustice" data-registry-key="beatriceandjustice">Our Zola Wedding Registry</a><script>!function(e,t,n){var s,a=e.getElementsByTagName(t)[0];e.getElementById(n)||(s=e.createElement(t),s.id=n,s.async=!0,s.src="https://widget.zola.com/js/widget.js",a.parentNode.insertBefore(s,a))}(document,"script","zola-wjs");</script>
