--- a/app/assets/stylesheets/base/_globals.scss
+++ b/app/assets/stylesheets/base/_globals.scss
@@ -1,14 +1,3 @@
-$site_max_width: 1440px;
-$bg_color: #FBFCF5;
-$font_color: #8A5550;
-$link_color: #8ee5c3;
-$link_hov_color: #4da68c;
-$font_family: 'Merriweather', serif;
-$header_font_family: 'Pinyon Script', cursive;
-$font_size: 14px;
-$line_height: percentage(20px / $font_size);
-
-
 h1 { margin: 0px; padding: 25px; font: $font_size * 4 $header_font_family; }
 
 h2 { font: $font_size * 2.5 $header_font_family; }
@@ -20,6 +9,36 @@ body {
 	font: $font_size $font_family;
 	line-height: $line_height;
 	background-color: $bg_color;
+}
+
+
+input {
+	background-color: $bg_color;
+	color: $input_color;
+	border: 2px solid $input_color;
+	outline: none;
+}
+
+input[type="text"] {
+	width: 75%;
+	border-radius: 4px;
+	padding: 3px;
+	font-size: 15px;
+}
+
+input[type=text]:focus {
+	border: 2px solid $link_hov_color;
+}
+
+input[type="submit"] {
+	border-radius: 8px;
+	font-size: 20px;
+	padding: 10px;
+}
+
+input[type="submit"]:hover {
+	background-color: $input_color;
+	color: $bg_color;
 }
 
 #container {
