--- a/app/views/rsvps/admin_index.html.erb
+++ b/app/views/rsvps/admin_index.html.erb
@@ -4,6 +4,7 @@
         <th>Email:</th>
         <th>Response</th>
         <th>Potluck?</th>
+        <th>Needs Lodging?</th>
         <th>In wedding party?</th>
         <th>Plus ones</th>
         <th>Distance</th>
@@ -17,6 +18,7 @@
         <td><%= invitee.email %></td>
         <td><%= invitee.response %></td>
         <td><%= invitee.potluck ? "Yes" : "No" %></td>
+        <td><%= invitee.needslodging %></td>
         <td><%= invitee.wedding_party ? "Yes" : "No" %></td>
         <td><%= invitee.plusone %></td>
         <td><%= invitee.distance %></td>
