--- a/app/views/rsvps/show.html.erb
+++ b/app/views/rsvps/show.html.erb
@@ -2,3 +2,4 @@ Hi <%= @user.first_name %>! Thanks for coming to your RSVP page.
 
 <%= render "rsvp-form" unless @user.has_rsvpd %>
 <%= render "has-rsvpd" if @user.has_rsvpd %>
+<%= @user.inspect %>
