--- a/app/views/info/faq.html.erb
+++ b/app/views/info/faq.html.erb
@@ -1,2 +1,40 @@
-<h1>Info#faq</h1>
-<p>Find me in app/views/info/faq.html.erb</p>
+<div class="question">
+    <h3><b>When should I show up?</b></h3>
+    <p>The ceremony will be starting at 1pm, but please arrive around noon and not before 11:30 am.</p>
+</div>
+<div class="question">
+    <h3><b>How do I get there? Where should I park? What should I bring?</b></h3>
+    <p>You can find all of this information on our <%= link_to("location page", info_location_path) %>.</p>
+</div>
+<div class="question">
+    <h3><b>I want to bring food for the potluck - what should I do with it?</b></h3>
+    <p>First off, thank you! We appreciate you helping to feed us and the other guests. Look for signage pointing to the kitchen, or ask us or a member of the wedding party if you’re having difficulty finding it. We’ll have a kitchen coordinator who can show you where to put your dish.</p>
+</div>
+<div class="question">
+    <h3><b>What will the ceremony be like?</b></h3>
+    <p>Our marriage ceremony will be a Meeting for Worship with Concern for Marriage - or rather, a Quaker wedding. You can find specific details on the <%= link_to("ceremony", info_ceremony_path) %> page of this website, but the basic outline of the ceremony is:
+        <ul>
+            <li>We will all come together and sit quietly in a circle (there are no assigned seats outside of the wedding party).</li>
+            <li>CJ Humphries, a member of our wedding party, will introduce the meeting to the Quaker marriage process. We will share our story and then initiate a period of silence.</li>
+            <li>People (you as well, should you feel so led) may speak out of the silence to share messages that feel important to say.</li>
+            <li>When we feel ready, we will recite our vows and marry ourselves</li>
+            <li>Another period of quiet worship and message-sharing, until the ceremony ends</li>
+        </ul></p>
+    <p>After the ceremony itself, everyone is expected to come sign the marriage certificate as a show of support and witness, before lunch. We’ll be with the certificate during this time, so please come say hi!</p>
+</div>
+<div class="question">
+    <h3><b>Do I need to get you presents? What should I get you as a present?</b></h3>
+    <p>You absolutely do not have to get us anything - showing up is more than enough. We understand that even that might be incredibly difficult for some folks, and will absolutely not judge you if you don’t get us anything.</p>
+    <p>That said - if you feel so led as to get us a present, we have a <registry>. There are some group gift options, too, in case you want to pitch in on things like our airfare, or if everything left on the registry is more than you want or are able to spend.</p>
+    <p>We'd ask that you please limit gifts to registry items, cash, or handmade/very sentimental items.</p>
+</div>
+<div class="question">
+    <h3><b>I saw you kissing someone else - are you cheating?</b></h3>
+    <p>This is really fine, and we’re not cheating - we promise!</p>
+    <p>We’re polyamorous, and have been so throughout our entire relationship and long before. Being non-monogamous is an important part of the ways that we value and respect each other. We are with each other each day because we actively choose to do so, not because we feel entitlement or ownership of each other. We value each other’s relationships beyond our own; they are beautiful and enriching parts of our lives. Who doesn’t love love?</p>
+    <p>Our marriage is a celebration of our commitment to this relationship and our intention of staying together for the foreseeable future. We intend to build our lives and a family together, and be each other’s main partners in all of the practical aspects of our lives, but to expect that we will be each other’s only or even primary love forever would be arrogant. We believe that love comes in many different ways throughout our lives, each time to teach us something we need to know for our own growth and show us something else beautiful about the world. To limit each other from that would be antithetical to the way that we envision our relationship.</p>
+</div>
+<br />
+<br />
+<br />
+<i>This FAQ last updated March 15th, 2018</i>
