email content update

--- a/app/views/info/ceremony.html.erb
+++ b/app/views/info/ceremony.html.erb
@@ -1,2 +1,31 @@
-<h1>Info#ceremony</h1>
-<p>Find me in app/views/info/ceremony.html.erb</p>
+<h2>The Ceremony</h2>
+<p>
+    We will be having a Quaker wedding; or rather, getting married in the manner of Friends; or rather,
+    having a meeting for worship with concern for marriage - whichever rolls off your tongue more easily.
+    If you’ve been to a Quaker wedding before, this might be more relaxed than you’re used to.
+    If you haven’t been to a Quaker wedding before, this might be the weirdest ceremony you’ve ever been to.
+</p>
+<p>
+    The idea is that the ceremony is at its core Meeting for Worship. Meeting for Worship is a time to gather
+    as a community and listen for that still small voice of the Spirit, Light, God, or whatever life force/higher power you believe in.
+    Meeting for Worship is generally silent with the exception of “messages”.
+    Messages come from a prompting by the Spirit et al. and are generally expected to be words
+    that feel like they are from something “bigger than you” or from a place of the Divine.
+    If you’re unfamiliar with Quaker meetings and leadings to speak, it might be likened to a line of thought
+    you feel should be said, that you get stuck on or keep coming back to as you sit silently.
+    It’s all very open to interpretation, and these practices are relaxed in a meeting for worship with concern for marriage.
+</p>
+<p>
+    Our ceremony will begin with all those in attendance, including us, sitting in more or less
+    a square/circle (seating sans heirarchy). The wedding party will sit on either side of us,
+    but every other seat is open.
+</p>
+<p>
+    CJ Humphries, <<<<!!!some descriptors about her, justice you should probably do this!!!>>>>, will explain
+    the Quaker marriage process and what to expect from the ceremony.
+    We'll share the story of our relationship, and then initiate a period of silence.
+</p>
+<p>
+    As folks feel led, they will speak out of the silence to share thoughts, feelings, well-wishes, support, and other messages.
+    At some point in this worship, we will decide that we're ready, recite our vows, and marry ourselves. We will also sign the marriage certificate.
+</p>
