content additions and cleanup prior to sending out invites

--- a/app/views/info/location.html.erb
+++ b/app/views/info/location.html.erb
@@ -43,7 +43,7 @@ From the Route 1 traffic interchange in Belfast drive west on Route 3. Go approx
 </p>
 
 <div style='width: 800px;'>
-  <div id="map" style='width: 800px; height: 400px;'></div>
+  <div id="map" style='width: 800px; height: 400px;'><i>There should be a map here; if it's not showing up, reloading the page should fix it</i></div>
 </div>
 
 <script type="text/javascript">
