--- a/app/views/info/our_relationship.html.erb
+++ b/app/views/info/our_relationship.html.erb
@@ -1,2 +1,77 @@
-<h1>Info#our-relationship</h1>
-<p>Find me in app/views/info/our-relationship.html.erb</p>
+<h2>Our Relationship</h2>
+<p>
+    There are several different ways to tell the story of our relationship, but the most romantic one is the story of the garden.
+    In spring of 2015, we were both in our own whirlwinds of life chaos. Justice had started growing
+    a mass quantity of medicinal herb seedlings in the greenhouse at Hampshire,
+    ostensibly for a self-directed class, but mostly for the therapy of having something new and vibrantly living to care for.
+    As the weather warmed up, the seedlings started to move into a plot in the community garden,
+    restored with the help of Justice’s Grandpapa.
+</p>
+<p>
+    Bea had been growing a collection of houseplants, which she would show Justice the progress of whenever xe came over.
+    She planted some peas in a box inside, but wasn’t sure where to move them as they got bigger.
+    Justice suggested the community garden, and so Bea brought them over and we planted them together in a plot beside Justice’s.
+    They needed supports to grow on, and Justice helped Bea tie together some bamboo into a makeshift trellis,
+    and assured her that thinning plants was a natural part of gardening.
+</p>
+<p>
+    We would go to the garden both to care for our plants and to see each other -
+    both of us thought that the other was there most of the time, but as it turns out,
+    neither of us were ever there for very long without the other showing up.
+    We attribute this to some form of fate or serendipity.
+    Gardening together was a really nice way to get to know each other that spring,
+    and continues to be an important part of our relationship.
+</p>
+<p>
+    Over the summer, we were both living in Northampton just a few blocks away, and often both spent time at Justice’s apartment.
+    Despite both our our best efforts and intentions, we gradually fell in love over the early summer.
+    On our first date we got pizza at <%= link_to "Mimmo’s", "http://bigpizzaslices.com" %> and went for a walk on the rail trail.
+    Justice tried to teach Bea the names of the wild medicinal herbs on the trail.
+    We found ourselves sitting on a boulder behind a church, both trying to very subtly inch towards each other on the rock.
+    We walked back to Bea’s place and laid on the floor with our heads touching, singing Kimya Dawson’s “I like Giants”.
+</p>
+<p>
+    That fall we both moved back into campus housing at Hampshire College and split our time between our dorm rooms.
+    Bea put up with Justice’s lofted queen bed that had nothing but the top of a desk under it for support
+    despite a fear of heights and back issues. One of our favorite memories from that year was
+    the night before a highly stressful family event, we went out in a rainstorm and just laid on the ground, in our pajamas,
+    and looked up at the night sky. It was so calming to feel the rain, and the night, just wash over us.
+    Bea graduated after that year and we spent the summer between Amherst and Belchertown.
+    After our friend Iris joked in the car about “if/when you get married”, Justice couldn’t stop thinking about it,
+    so we discussed the possibility. Bea wanted to wait for awhile longer before pursuing it, to be sure.
+</p>
+<p>
+    In the fall of 2017, we moved into an adorable condo in Leverett that had a big garden,
+    and was directly adjacent to the Dakin humane shelter. We visited a lot of kittens, dogs, and cats that year.
+    We started the process of forming a clearness committee within New England Young Adult Friends
+    to discuss the possibility of getting engaged. The committee met twice and had glowingly positive feedback for us.
+    We were clear to be engaged that midwinter.
+</p>
+<p>
+    On February 11th 2017, Justice brought Bea to the Smith College botanical gardens and proposed
+    with a love letter accordioned into a chocolate box, with a ring in place of one of the chocolates at the end.
+    We exchanged emerald and garnet rings.
+    A few days later, Bea proposed to Justice under the moonlight, while Justice was in a hammock swing in our backyard.
+</p>
+<p>
+    <%= image_tag("https://s3.amazonaws.com/wedsite-files/images/proposal-box-letter-1.jpg", :class => "relationshipphoto") %>
+    <%= image_tag("https://s3.amazonaws.com/wedsite-files/images/proposal-box-letter-2.jpg", :class => "relationshipphoto") %>
+    <%= image_tag("https://s3.amazonaws.com/wedsite-files/images/proposal-box-letter-3.jpg", :class => "relationshipphoto") %>
+    <%= image_tag("https://s3.amazonaws.com/wedsite-files/images/proposal-box-letter-4.jpg", :class => "relationshipphoto") %>
+    <%= image_tag("https://s3.amazonaws.com/wedsite-files/images/proposal-box-letter-5.jpg", :class => "relationshipphoto") %>
+    <%= image_tag("https://s3.amazonaws.com/wedsite-files/images/rings-hands.jpg", :class => "relationshipphoto") %>
+</p>
+<p>
+    <%= image_tag("https://s3.amazonaws.com/wedsite-files/images/proposal-2.gif", :class => "relationshipphoto") %>
+</p>
+<p>
+    After Justice graduated, we packed everything we owned (that we wanted to keep) into the car and headed for Seattle.
+    We got settled into our new apartment and got color-coordinated dishes, towels, and blankets.
+    All in all, it was a major lifestyle upgrade.
+    Since last summer Justice has been hard at work on xyr doctorate in Naturopathic Medicine,
+    and we have been enjoying the beautiful Pacific Northwest!
+</p>
+<p>
+    We couldn’t be more excited to have you all with us as we celebrate our love in the woods of Maine.
+    We hope that you will join us, and help add to our story.
+</p>
