--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -10,7 +10,7 @@
 			<%= link_to_unless_current "Ceremony", {controller: "info", action: "ceremony"} %>
 		</li>
 		<li>
-			<%= link_to_unless_current "Our relationship", {controller: "info", action: "our_relationship"} %>
+			<%= link_to_unless_current "Our Relationship", {controller: "info", action: "our_relationship"} %>
 		</li>
 		<li>
 			<%= link_to_unless_current "Registry", {controller: "info", action: "registry"} %>
