--- a/app/views/info/ceremony.html.erb
+++ b/app/views/info/ceremony.html.erb
@@ -21,11 +21,17 @@
     but every other seat is open.
 </p>
 <p>
-    CJ Humphries, <<<<!!!some descriptors about her, justice you should probably do this!!!>>>>, will explain
+    CJ Humphries, one of Justice’s oldest and dearest friends from Friends Camp and a “birthright Friend”, will explain
     the Quaker marriage process and what to expect from the ceremony.
     We'll share the story of our relationship, and then initiate a period of silence.
 </p>
 <p>
     As folks feel led, they will speak out of the silence to share thoughts, feelings, well-wishes, support, and other messages.
-    At some point in this worship, we will decide that we're ready, recite our vows, and marry ourselves. We will also sign the marriage certificate.
+    At some point in this worship, we will decide that we're ready, recite our vows, and marry ourselves.
+    We will also sign the marriage certificate, and ask that those in attendance sign it after us
+    to witness our commitment and their support of our marriage.
+    
 </p>
+<br />
+<br />
+<p><i>This page is still under construction; last updated Saturday, May 5th, 2018</i></p>
