--- a/app/views/rsvps/show.html.erb
+++ b/app/views/rsvps/show.html.erb
@@ -1,4 +1,4 @@
 Hi <%= @user.first_name %>! Thanks for coming to your RSVP page.
-
-<%= render "rsvp-form" unless @user.has_rsvpd %>
+This website is still under construction, so be sure to check back closer to the wedding date to see updated information about the ceremony, the venue, and new registry items.
 <%= render "has-rsvpd" if @user.has_rsvpd %>
+<%= render "rsvp-form" unless @user.has_rsvpd %>
