--- a/app/views/rsvps/show.html.erb
+++ b/app/views/rsvps/show.html.erb
@@ -1,11 +1,9 @@
 Hi <%= @user.first_name %>! Thanks for coming to your RSVP page.<br />
-You
 <% if @user.family_invited %>
-    <%= " and your family are all " %>
+    <%= "You and your family are all invited to attend our wedding" %>
 <% else %>
-    <%= "'re " %>
-<% end %>
-invited to attend our wedding<br />
+    <%= "You're invited to attend our wedding" %>
+<% end %><br />
 This website is still under construction, so be sure to check back closer to the wedding date to see updated information about the ceremony, the venue, and new registry items.<br />
 <%= render "has-rsvpd" if @user.has_rsvpd %>
 <%= render "rsvp-form" unless @user.has_rsvpd %>
