--- a/app/views/rsvps/_rsvp_skill_fields.html.erb
+++ b/app/views/rsvps/_rsvp_skill_fields.html.erb
@@ -1,6 +1,6 @@
 <div class="nested-fields">
 <div class="rsvp-skill-fields">
-    <div class="skills_from_list">
+    <div class="skill_from_list">
         <%= f.association :skill, collection: Skill.all.order('name').reject {|a| @user.skills.include?(skill)}, prompt: 'Choose an existing skill' %>
     </div>
     <%= link_to_add_association 'or create a new one', f, :skill %>
