add email to rsvp page

--- a/app/views/rsvps/_has-rsvpd.html.erb
+++ b/app/views/rsvps/_has-rsvpd.html.erb
@@ -44,7 +44,7 @@ You've rsvpd!
 <% end %>
 <p>
 	If you need to change your rsvp, click the button below.
-	If you're changing whether or not you're attending, please email us at <%= ENV["WEDDING_EMAIL"] %> if it's been more than a day since your previous rsvp.
+	If you're changing whether or not you're attending, please email us at beatrice.and.justice@gmail.com if it's been more than a day since your previous rsvp.
 </p>
 <%= form_for @user do |f| %>
 	<%= f.hidden_field :has_rsvpd, value: 'false' %>
